# ewp-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md
.github/workflows/: docker_build.yml  rust.yml
backend/: .env  Cargo.toml  go.mod  main.go
backend/src/: main.rs
backend/src/api/: user.rs
backend/src/model/: company.rs  mod.rs  project.rs  skill.rs  user.rs
backend/src/repository/: ddbuser.rs  firedb.rs  mod.rs
db-scripts/: basemodel.json  create-db.sql  create-tables.sql  generated-testdata.sql  populatedb.py
py-api/: .gitignore  api.py  db.py
py-api/models/: person.py
python-api/: api.py  auth.py  main.py  readme.md  repository.py  schemas.py
rust-api/: .env  .env-template  .gitignore  Cargo.toml  Dockerfile
rust-api/src/: api.rs  auth.rs  main.rs  repository.rs  schemas.rs
rust-api/src/api/: auth.rs  company.rs  mod.rs  profiles.rs  user.rs
rust-api/src/model/: mod.rs  project.rs
rust-api/src/models/: company.rs  mod.rs  project.rs  skill.rs  user.rs  user_skill.rs
rust-api/src/repository/: firedb.rs  mongodb.rs
rust-api/src/routes/: user.rs
src/: api.rs  auth.rs  main.rs  repository.rs  schemas.rs
