[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
chrono = {version = "0.4.23", features= ["serde"]}
uuid = {version = "^0.8.2", features = ["v4"]}
serde = {version = "^1.0.125", features = ["derive"]}
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }