[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
mongodb = "2.1.1"
futures = "0.3.1"
uuid = {version = "^0.8.2", features = ["v4", "serde"]}
serde = {version = "^1.0.125", features = ["derive"]}
dotenv = "0.15.0"
