[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
env_logger = "0.9"
log = "0.4"
mongodb = "2.1.1"
futures = "0.3.1"
jsonwebtoken = "7.2.0"
pwhash = "1.0.0"
actix-web-httpauth = "0.6.0"
uuid = {version = "^0.8.2", features = ["v4", "serde"]}
serde = {version = "^1.0.125", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15.0"
